...

  return (
    <SafeAreaView style={{ flex: 1 }}>
      <TopNavigation
        title="Marvel Heroes"
        alignment="center"
        testID="heroesListTopNavigation"
      />
      <Divider />

      {results.length ? (
        <Layout>
          <StackSpacer size={3} />
...
            placeholder="filter characters..."
            textStyle={styles.inputText}
            onChangeText={setFilter}
            style={{ paddingLeft: 10, paddingRight: 10 }}
            autoCapitalize="none"
            autoCorrect={false}
            testID="filterTextInput"
          />

          <StackSpacer size={1} />

          <List
            data={
...
